<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"> </string>
    <string name="default_image">default</string>
    <string name="default_time">00:00</string>
    <string name="local_music_list">本地歌曲</string>
	<string name="favorite_music_list">收藏歌曲</string>
	<string name="network_music_list">网络歌曲</string>
	<string name="new_music_list">新建播放列表</string>
	<string name="local_music_list_loading">正在加载,请稍候…</string>
	<string name="local_music_list_empty">空列表……</string>
	<string name="one">1.</string>
	<string name="unKnowArtist">未知名艺术家</string>
	<string name="favoriteListIsEmpty">当前没有收藏任何歌曲</string>
	<string name="playListName">请输入列表名称</string>
	<string name="sure">确定</string>
	<string name="cancel">取消</string>
	<string name="delete">删除</string>
	<string name="play">播放</string>
	<string name="warn">警告</string>
	<string name="current_list_exist">当前列表已经存在</string>
	<string name="add_to_play_lsit">添加到播放列表</string>
	<string name="set_to_call_ring">设置为来电铃声</string>
	<string name="song_detail_info">歌曲详细信息</string>
</resources>
