<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/common_list_imge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_image"
            android:src="@drawable/mp3_list_item_logo" />

        <TextView
            android:id="@+id/common_list_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/one" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp" >

			<FrameLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    tools:ignore="UselessParent" >

				<LinearLayout
				    android:id="@+id/common_list_song_artist_layout"
				    android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:orientation="vertical">
					<TextView
		                android:id="@+id/common_list_song_txt"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/hello_world" />
	
	            	<TextView
		                android:id="@+id/common_list_artist_txt"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/hello_world" />
				    
				</LinearLayout>
				<TextView 
				    android:id="@+id/common_artistlist_artist_txt"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:visibility="gone"
	                android:text="@string/unKnowArtist" />
		    
			</FrameLayout>
         
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_image"
            android:src="@drawable/mp3_list_item_logo"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/common_list_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="20dp"
            android:text="@string/default_time" />
    </LinearLayout>

</RelativeLayout>